# tv-screener

tv-screener/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
tv-screener/docs/: openapi.yaml  redoc.html  swagger.html
tv-screener/tests/: test_cli.py  test_client.py  test_sdk.py  test_spec.py  test_spec_structure.py
tv-screener/tv_screener/: cli.py  client.py  config.py  sdk.py  spec.py  utils.py
